added CSS variables for the CSS colors

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,5 +1,5 @@
 .header {
-    background-color: #5271ff;
+    background-color: var(--blue);
     color: white;
     height: 100px;
     display: flex;
