--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,6 +1,6 @@
 footer {
     margin-top: 50px;
-    background-color: #5271ff;
+    background-color: var(--blue);
     color: white;
     height: 100px;
     font-size: 20px;
