--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -6,7 +6,7 @@
     align-items: center;
     margin-bottom: 50px;
     justify-content: space-between;
-    padding: 0px 20px;
+    padding: 0 20px;
 }
 
 .header .header-heading {
