--- a/src/styles/Products.css
+++ b/src/styles/Products.css
@@ -50,7 +50,7 @@
 }
 
 .info .model {
-    font-size: 16px;
+    font-size: 20px;
 }
 
 .info .price {
@@ -74,7 +74,7 @@
     color: var(--white);
     border: none;
     border-radius: 4px;
-    transition: all 0.2s linear;
+    transition: all 200ms linear;
     text-decoration: none;
     text-align: center;
     display: flex;
@@ -90,7 +90,7 @@
 }
 
 
-@media (min-width: 400px) {    
+ @media (min-width: 640px) {    
     .info .model {
         font-size: 25px;
     }
@@ -106,31 +106,19 @@
         letter-spacing: 0.5px;
     }
 
+    .climate-conditioners {
+        width: 80%;
+    }
+
 }
 
-@media (min-width: 550px) {
-    .info .model {
-        font-size: 25px;
-    }
-    
-    .info .price {
-        font-size: 40px;
-    }
-    
-    .btn-wrapper .btn {
-        width: 350px;
-        height: 60px;
-        font-size: 20px;
-        letter-spacing: 0.5px;
-    }
-}
-
-@media (min-width: 750px) {
+@media (min-width: 768px) {
     .climate-conditioners {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
-        gap: 30px;
+        gap: 20px;
         margin: 0 auto;
+        width: 90%;
     }
 
     .climate-conditioners .climate {
@@ -140,13 +128,13 @@
     
     .climate-conditioners .climate .img-container {
         width: 100%;
-        height: 220px;
+        height: 50%;
     }
     
     .img-container img {
         width: 100%;
         height: 100%;
-        object-fit: cover;
+        object-fit: contain;
         margin: 0;
     }
 
@@ -159,18 +147,7 @@
 
 }
 
-@media (min-width: 960px) {
-    .climate-conditioners .climate {
-        height: 670px;
-    }
-
-    .climate-conditioners .climate .img-container {
-        width: 100%;
-        height: 300px;
-    }
-}
-
-@media (min-width: 1000px) {
+@media (min-width: 1024px) {
 
     .climate-conditioners {
         display: grid;
@@ -185,7 +162,7 @@
 
     .climate-conditioners .climate .img-container {
         width: 100%;
-        height: 200px;
+        height: 50%;
     }
 
     .info {
@@ -207,9 +184,9 @@
 
     }
 
-} 
+}
 
-@media (min-width: 1300px) {
+@media (min-width: 1280px) {
     .climate-conditioners .climate {
         height: 470px;
         
@@ -217,11 +194,11 @@
 
     .climate-conditioners .climate .img-container {
         width: 100%;
-        height: 250px;
+        height: 50%;
     }
 }
 
-@media (min-width: 1500px) {
+@media (min-width: 1536px) {
     .climate-conditioners {
         display: grid;
         grid-template-columns: repeat(4, 1fr);
