--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -1,7 +1,17 @@
 :root {
+
+    /* colors */
     --red: #cc0000;
     --blue: #5271ff;
     --yellow: #f7cb05;
     --white: #fff;
     --lightgray: lightgrey;
+
+    /* media breakpoints */
+
+    --sm: 640px;
+    --md: 768px;
+    --lg: 1024px;
+    --xl: 1280px;
+    --twoXl: 1536; 
 }
