created contact page and some of the feartures for the detailes page

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -11,6 +11,12 @@
 
 .header .header-heading {
     font-weight: normal;
+    color: var(--white);
+}
+
+
+.header a {
+    text-decoration: none;
 }
 
 .header .header-img {
